--- a/MyApplicationTelephony/app/src/main/AndroidManifest.xml
+++ b/MyApplicationTelephony/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jie.myapplicationtelephony">
+
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"></uses-permission>
     <application
@@ -18,13 +20,10 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".PhoneStatReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE"/>
-                <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-            </intent-filter>
-        </receiver>
+        <service android:name=".CallService" >
 
+
+        </service>
 
     </application>
 
