--- a/TestTelephonyService/app/src/main/AndroidManifest.xml
+++ b/TestTelephonyService/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.it.testtelephonyservice">
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.READ_CALL_LOG"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".CallingServiceImpl" >
+        <service android:name=".CallingServiceImpl">
         </service>
     </application>
 
